# ConnectionPool-Mysql

./: .gitignore  CMakeLists.txt  mysql.ini  readme.md
include/: CommonConnectionPool.h  Connection.h  public.h
src/: CommonConnectionPool.cpp  Connection.cpp  main.cpp
test/: test_main.cpp
